modify start jvm parameter